Serialize response 9minus JWS)